# cloudNativeMernSkeleton

./: .env  .gitignore  README.md  docker-compose.yml  helmMinikubeInstall.sh  mynginx.yaml  myvalues.yaml  tlssecret.yaml
beastmultichat/: CMakeLists.txt
beastmultichat/src/: CMakeLists.txt  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  main.cpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp  websocket_session.hpp
beastmultichat/tools/: reindexRtags.sh
config/amongo/: mongo-init.js
config/anginx/: my.key  nginxConfig.conf
config/mongo/: zzzmongo-init.js  zzzmongo-init.sh  zzzmongo.conf
config/nginx/: my.crt  nginxConfig.conf
config/nginx/certs/: default.crt  default.key
config/nginx/nginx/.github/workflows/: lint.yml
gamestats/: Dockerfile  package.json  server.js
gamestats/src/: app.js
mernapp/: Dockerfile  Dockerfile.dev  nodemon.json  package-lock.json  package.json  webpack.config.server.js
mernapp/client/core/: Menu.js
mernapp/client/media/: Media.js
mernapp/config/: config.js
mernapp/server/: express.js
